--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
 ##############################################################################################################################################################################################            
   ArtifactGenerate:
       runs-on: windows-latest
-      needs: [build,testCore]
+      needs: [build,TestUnitarios]
       env:
           Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj  
       steps:
