--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,7 +204,7 @@ jobs:
     
       runs-on: windows-latest
       environment: QA
-      needs: [DeployDEV,testFuncionales]
+      needs: [ArtifactGenerate]
       if: success() && github.ref == 'refs/heads/main'
 
       env:
@@ -232,7 +232,7 @@ jobs:
   TestFuncionalesQA:
 
       runs-on: windows-latest
-      needs: [DeployQA, TestFuncionalesQA]
+      needs: DeployQA
 
       steps:
         - uses: actions/checkout@v2
@@ -250,7 +250,7 @@ jobs:
     
       runs-on: windows-latest
       environment: PRE
-      needs: [DeployDEV,testFuncionales]
+      needs: [DeployQA,TestFuncionalesQA]
       if: success() && github.ref == 'refs/heads/main'
 
       env:
@@ -275,10 +275,56 @@ jobs:
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 ##############################################################################################################################################################################################
         
-  TestCore:
+  TestCorePRE:
 
       runs-on: windows-latest
       needs: DeployPRE
+
+      steps:
+        - uses: actions/checkout@v2
+        - name: Test with the dotnet CLI
+          run: dotnet test src\TestProject2\TestProject2.csproj --logger trx --results-directory src\TestProject1\TestResults
+ # Using the trx-parser action
+        - name: trx-parser
+          uses: NasAmin/trx-parser@v0.2.0
+          id: trx-parser
+          with:
+            TRX_PATH: ${{ github.workspace }}/src/TestProject2/TestResults #This should be the path to your TRX files
+            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}                     
+##############################################################################################################################################################################################
+  DeployPRO:
+    
+      runs-on: windows-latest
+      environment: PRO
+      needs: [DeployQA,TestFuncionalesQA]
+      if: success() && github.ref == 'refs/heads/main'
+
+      env:
+          AZURE_WEBAPP_NAME_QA: uksouth-iflx-shar-WebApplicationDGP-qa-app   # set this to your application's name
+          AZURE_WEBAPP_PACKAGE_PATH: 'src/WebApplicationDGP/path/to/artifact/'      # set this to the path to your web app project, defaults to the repository root
+      
+      steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: DownloadArtifact
+        uses: actions/download-artifact@v2
+        with:
+          name: WebAppDGP
+          path: src/WebApplicationDGP/path/to/artifact
+
+      - name: 'Deploy to Azure WebApp'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME_QA }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_QA }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+##############################################################################################################################################################################################
+        
+  TestSmokePRO:
+
+      runs-on: windows-latest
+      needs: DeployPRO
 
       steps:
         - uses: actions/checkout@v2
