--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,14 @@ name: WorkFlow CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: '*'
+    branches:    
+      #- '*'         # matches every branch that doesn't contain a '/'
+      #- '*/*'       # matches every branch containing a single '/'
+      #- '**'        # matches every branch
+      - '!master'   # excludes master
   pull_request:
-    branches: '*'
+    branches:
+      - master
 
 jobs:
 ##############################################################################################################################################################################################
