--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
     branches:    
       #- '*'         # matches every branch that doesn't contain a '/'
       #- '*/*'       # matches every branch containing a single '/'
-      #- '**'        # matches every branch
+      - '**'        # matches every branch
       - '!master'   # excludes master
   pull_request:
     branches:
