--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,9 @@ name: WorkFlow CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches:    
-      #- '*'         # matches every branch that doesn't contain a '/'
-      #- '*/*'       # matches every branch containing a single '/'
-      - '**'        # matches every branch
-      - '!master'   # excludes master
+    branches:
+      - '*'
+      - '!master'
   pull_request:
     branches:
       - master
