--- a/.github/workflows/CreateTag.yml
+++ b/.github/workflows/CreateTag.yml
@@ -21,4 +21,4 @@ jobs:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         strategy: regex # Optional since regex_pattern is defined
         root: "src/my.file"
-        regex_pattern: "(version=)(?<version>[\d+\.]{3}([-\+][\w\.0-9]+)?)"
+        regex_pattern: "(version=)(?<version>[/d+/.]{3}([-/+][/w/.0-9]+)?)"
