--- a/.github/workflows/CreateTag.yml
+++ b/.github/workflows/CreateTag.yml
@@ -20,6 +20,6 @@ jobs:
       with:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         strategy: regex # Optional since regex_pattern is defined
-        root: "src/my.file"
+        root: "src/version.txt"
         regex_pattern: "version=(([0-9]+\.?){3})"
         #regex_pattern: "version=([0-9\.]{5}([-\+][\w\.0-9]+)?)"
