--- a/.github/workflows/CreateTag.yml
+++ b/.github/workflows/CreateTag.yml
@@ -1,4 +1,5 @@
-name: Create Tag
+#https://github.com/marketplace/actions/autotagger
+name: Create Tag From version.txt
 
 # Controls when the workflow will run
 on:
