--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -14,7 +14,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: true
+          default_bump: "patch"
       # - name: Create a GitHub release
       #   uses: ncipollo/release-action@v1
       #   with:
