--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -4,18 +4,28 @@ on:
   push:
     branches:
       - main
+env:
+    commit_message: ${{ github.event.head_commit.message }}
 jobs:
+
+
   TagGenerationjob:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set env
+        run: echo "commit_pattern=$(echo ${{ github.event.head_commit.message }} | cut -c 1-6)" >> $GITHUB_ENV
+      - name: Test
+        run: echo $commit_pattern
+      
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          #Vamos a buscar las cadenas [mayor] o [minor] en el commit
-          default_bump: ${{ github.event.head_commit.message }}
+                  
+          
+          #default_bump: ${{ github.event.head_commit.message }}
       # - name: Create a GitHub release
       #   uses: ncipollo/release-action@v1
       #   with:
