--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -20,8 +20,8 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          #default_bump: $commit_pattern
-          default_bump: minor
+          run: echo $commit_pattern
+          default_bump: $commit_pattern
       # - name: Create a GitHub release
       #   uses: ncipollo/release-action@v1
       #   with:
