--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -21,7 +21,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: $env:$commit_pattern
+          default_bump: ${{ env:$commit_pattern }}
       # - name: Create a GitHub release
       #   uses: ncipollo/release-action@v1
       #   with:
