--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -6,7 +6,7 @@ on:
       - main
 env:
     commit_message: ${{ github.event.head_commit.message }}
-    $commit_pattern: patch
+    #$commit_pattern: patch
 jobs:
   TagGenerationjob:
     runs-on: ubuntu-latest
@@ -15,13 +15,14 @@ jobs:
       - name: Find Version Type
         run: echo "commit_pattern=$(echo ${{ github.event.head_commit.message }} | cut -c 2-6)" >> $GITHUB_ENV
       - name: Print Version Type
+        id: commit_pattern_id
         run: echo $commit_pattern
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: ${{ commit_pattern }}
+          default_bump: ${{ steps.commit_pattern_id.outputs }}
       # - name: Create a GitHub release
       #   uses: ncipollo/release-action@v1
       #   with:
