--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -13,16 +13,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Find Version Type
-        run: echo "commit_pattern=$(echo ${{ github.event.head_commit.message }} | cut -c 2-6)" >> $GITHUB_ENV
-      - name: Print Version Type
         id: commit_pattern_id
-        run: echo $commit_pattern
+        run: echo "::set-output name=commit_pattern=$(echo ${{ github.event.head_commit.message }} | cut -c 2-6)"
+      - name: Print Version Type
+        run: echo ${{ steps.commit_pattern_id.outputs.commit_pattern }}
+        
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: $commit_pattern
+          default_bump: ${{ steps.commit_pattern_id.outputs.commit_pattern }}
       # - name: Create a GitHub release
       #   uses: ncipollo/release-action@v1
       #   with:
