--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Find Version Type
         id: commit_pattern_id
-        run: echo "::set-output name=commit_pattern=$(echo ${{ github.event.head_commit.message }} | cut -c 2-6)"
+        run: echo "::set-output name=commit_pattern::$(echo ${{ github.event.head_commit.message }} | cut -c 2-6)"
       - name: Print Version Type
         run: echo ${{ steps.commit_pattern_id.outputs.commit_pattern }}
         
