--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -17,7 +17,7 @@ jobs:
       #   id: commit_pattern_id
       #   run: echo "::set-output name=commit_pattern::$(echo ${{ github.event.head_commit.message }} | cut -c 2-6)"
       # - name: Print Version Type
-      - name: Test
+      - name: Print Release Type
         run: echo ${{ env.commit_pattern }}
       #   run: echo ${{ steps.commit_pattern_id.outputs.commit_pattern }}
         
