--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: echo Head Commit message
+        run:  echo ${{ github.event.head_commit.message }}
       - name: Find Version Type
         run: echo "commit_pattern=$(echo ${{ github.event.head_commit.message }} | cut -c 2-6)" >> $GITHUB_ENV
       #   id: commit_pattern_id
