--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -47,5 +47,7 @@ jobs:
           echo ${{ steps.tag_version.outputs.changelog }}
           echo Commit:
           echo ${{ github.event.head_commit.message }}
+          echo pull_requesttitle:
+          ${{ github.event.pull_request.title }}
 
 #https://github.com/marketplace/actions/github-tag
