--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,7 +3,8 @@ on:
   pull_request:
     branches:
         - main
-  check_run: 
+jobs:
+  PRCheck:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v1
