--- a/.github/workflows/TagAction.yml
+++ b/.github/workflows/TagAction.yml
@@ -1,4 +1,4 @@
-#      patch asdad
+#      patch
 name: TagGeneration
 on:
   push:
@@ -6,12 +6,27 @@ on:
       - main
 env:
     commit_message: ${{ github.event.head_commit.message }}
-
+    #$commit_pattern: patch
 jobs:
   TagGenerationjob:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2 
+      - uses: actions/checkout@v2
+
+      - name: Set output
+        run: |
+          echo TAG:
+          echo ${{ steps.tag_version.outputs.new_tag }}
+          echo RELEASE:
+          echo ${{ steps.tag_version.outputs.new_tag }}
+          echo changelog:
+          echo ${{ steps.tag_version.outputs.changelog }}
+          echo Commit:
+          echo ${{ github.event.head_commit.message }}
+          echo pull_requesttitle:
+          ${{ github.event.pull_request.title }}
+          
+          
       - name: echo Head Commit message
         run:  echo ${{ github.event.head_commit.message }}
       - name: Find Version Type
@@ -36,16 +51,5 @@ jobs:
       #     tag: ${{ steps.tag_version.outputs.new_tag }}
       #     name: Release ${{ steps.tag_version.outputs.new_tag }}
       #     body: ${{ steps.tag_version.outputs.changelog }}
-          
-      - name: Set output2
-        run: |
-          echo TAG:
-          echo ${{ steps.tag_version.outputs.new_tag }}
-          echo RELEASE:
-          echo ${{ steps.tag_version.outputs.new_tag }}
-          echo changelog:
-          echo ${{ steps.tag_version.outputs.changelog }}
-          echo Commit:
-          echo ${{ github.event.head_commit.message }}
 
 #https://github.com/marketplace/actions/github-tag
