--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 # run: dotnet test $env:Test_Project_Path --no-restore --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
 #last
-name: WorkFlow CI
+name: WorkFlow CI / CD
 
 # Controls when the workflow will run
 on:
