--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -128,7 +128,7 @@ jobs:
       #if: github.ref == 'refs/heads/main'
 
       env:
-          WEBAPP_NAME: ${{ secrets.AZURE_WEBAPP_NAME }}   # set this to your application's name
+          AZURE_WEBAPP_NAME_QA: uksouth-iflx-shar-WebApplicationDGP-qa-app   # set this to your application's name
           AZURE_WEBAPP_PACKAGE_PATH: 'src/WebApplicationDGP/path/to/artifact/'      # set this to the path to your web app project, defaults to the repository root
       
       steps:
@@ -151,8 +151,8 @@ jobs:
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_QA }}
+          app-name: ${{ env.AZURE_WEBAPP_NAME_QA }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 ##############################################################################################################################################################################################
         
