--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,7 +27,7 @@ jobs:
       strategy:
         matrix:
           dotnet-version: [ '3.1.x' ]
-          type: [unitarias]
+          Browser: [IE, Chrome, FireFox]
       runs-on: windows-latest
       needs: ValidacionSemanticRelease
       
