--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -151,7 +151,7 @@ jobs:
 
 
 ##############################################################################################################################################################################################
-  DeployPRE:
+  DeployandTestPRE:
     
       runs-on: windows-latest
       environment: PRE
@@ -189,18 +189,8 @@ jobs:
           app-name: ${{ env.AZURE_WEBAPP_NAME_DEV }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEV }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-##############################################################################################################################################################################################
-        
-  TestCorePRE:
 
-      runs-on: windows-latest
-      environment: PRE
-      concurrency: PREPRO      
-      needs: DeployPRE
-
-      steps:
-        - uses: actions/checkout@v2
-        - name: Test with the dotnet CLI
+      - name: Smoke Test PRE
           run: dotnet test src\TestProject2\TestProject2.csproj --logger trx --results-directory src\TestProject1\TestResults
  # Using the trx-parser action
         - name: trx-parser
@@ -208,27 +198,14 @@ jobs:
           id: trx-parser
           with:
             TRX_PATH: ${{ github.workspace }}/src/TestProject2/TestResults #This should be the path to your TRX files
-            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}                     
+            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}              
 ##############################################################################################################################################################################################
-##############################################################################################################################################################################################
-  CheckInfraPRO:
-
-      runs-on: windows-latest
-      environment: PRO
-      concurrency: PRODUCTION
-      needs: TestCorePRE
-
-      steps:
-
-      - name: 'Existe infra'
-        run: echo "Infra OK"
-##############################################################################################################################################################################################
-  DeployPRO:
+  DeployandTestPRO:
     
       runs-on: windows-latest
       environment: PRO
       concurrency: PRODUCTION
-      needs: [CheckInfraPRO]
+      needs: [DeployandTestPRE]
       #if: success() && github.ref == 'refs/heads/main'
 
       env:
@@ -236,6 +213,9 @@ jobs:
           AZURE_WEBAPP_PACKAGE_PATH: 'src/WebApplicationDGP/path/to/artifact/'      # set this to the path to your web app project, defaults to the repository root
       
       steps:
+      - name: 'Check Infra PRE'
+        run: echo "Infra OK"
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -258,18 +238,9 @@ jobs:
           app-name: ${{ env.AZURE_WEBAPP_NAME_QA }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_QA }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-##############################################################################################################################################################################################
-        
-  TestSmokePRO:
 
-      runs-on: windows-latest
-      environment: PRO
-      concurrency: PRODUCTION
-      needs: [DeployPRO]
-
-      steps:
-        - uses: actions/checkout@v2
-        - name: Test with the dotnet CLI
+          
+        - name: Test PRODUCTION 
           run: dotnet test src\TestProject2\TestProject2.csproj --logger trx --results-directory src\TestProject1\TestResults
  # Using the trx-parser action
         - name: trx-parser
@@ -277,5 +248,5 @@ jobs:
           id: trx-parser
           with:
             TRX_PATH: ${{ github.workspace }}/src/TestProject2/TestResults #This should be the path to your TRX files
-            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}                     
+            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}             
 ##############################################################################################################################################################################################
