--- a/DGPEnvironment.yml
+++ b/DGPEnvironment.yml
@@ -25,3 +25,10 @@ jobs:
               displayName: 'NuGet restore'
               inputs:
                 restoreSolution: '$(Parameters.solution)'
+            - task: VSBuild@1
+              displayName: 'Build solution'
+              inputs:
+                solution: '$(Parameters.solution)'
+                msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactstagingdirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
+                platform: '$(BuildPlatform)'
+                configuration: '$(BuildConfiguration)'                
