--- a/DGPEnvironment.yml
+++ b/DGPEnvironment.yml
@@ -1,3 +1,9 @@
+variables:
+- name: BuildParameters.solution
+  value: '**\*.sln'
+- name: BuildParameters.ArtifactName
+  value: drop
+  
 trigger: 
 - main
 
